UtahLiveDataTest/src/objects/PanelUserTemplate__c.object
<CustomObject>
    <description>[Business]  Association of a user with the Review Template</description>
    <fields>
        <fullName>ExtraTimeRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select the checkbox if the Reviewer needs extra time</description>
        <inlineHelpText>Select the checkbox if the Reviewer needs extra time</inlineHelpText>
        <label>Extra Time Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExtraTime__c</fullName>
        <label>Extra Time (In Days)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ReviewPanelTemplate__c</fullName>
        <label>Review Panel Template</label>
        <referenceTo>ReviewPanelTemplate__c</referenceTo>
        <relationshipLabel>Panel User Templates</relationshipLabel>
        <relationshipName>Panel_User_Templates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ReviewStepSearchType__c</fullName>
        <formula>IF( ReviewPanelTemplate__r.Name = &quot;SME Review Panel&quot;, &quot;&apos;SME&apos;&quot;, &quot;contactId=null&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ReviewStepSearchType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PanelUserTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SME_Review_Check__c</fullName>
        <formula>IF(ReviewPanelTemplate__r.Name = &quot;SME Review Panel&quot;, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SME Review Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isExternalUserType__c</fullName>
        <formula>INCLUDES(ReviewPanelTemplate__r.UserType__c,&quot;External&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isExternalUserType</label>
        <type>Checkbox</type>
    </fields>
    <label>Panel User Template</label>
    <nameField>
        <label>Panel User Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Panel User Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>